# agent-hr

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  config.py
src/agents/: __init__.py  base_agent.py  benefits_agent.py  onboarding_agent.py  payroll_agent.py  recruiting_agent.py
src/api/: main.py
